Fix project paragraph flex alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,7 @@ html {
   padding-top: var(--default-padding);
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 .project-url {
   color: var(--default-base-color);
